# pt4sc

./: .gitignore  Makefile  README.md  TABLES.md  cli.py  pyproject.toml  shell.nix
notebooks/: checkpoints.py  embeddings.py  multinerd.py  prompt.py  t5.py
scripts/: all.sh  main.sh  test.sh
slurm/: hpc.sh  nix.sh  run.sh
src/icft/: common.py  logging.py  metrics.py  models.py  types.py
src/icft/datasets/: __init__.py  common.py  estner.py  multinerd.py  superglue.py
src/icft/models/: pt.py
src/icft/scripts/: cli.py  common.py  fine_tune.py  predict.py  prompt_tune.py  superglue.py
src/icftsc/: logging.py  metrics.py
src/icftsc/datasets/: estner.py  multinerd.py  superglue.py
src/icftsc/modeling/: common.py
src/icftsc/scripts/: common.py  fine_tune.py  prompt_tune.py
src/pt4sc/: models.py
src/pt4sc/datasets/: estner.py  multinerd.py  superglue.py
tests/: conftest.py  test_estner.py  test_metrics.py  test_multinerd.py  test_pt_model.py
