[project]
name = "icft"
version = "0.1.0"
description = "In-Context Fine-Tuning"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "transformers>=5.0.0",
    "scikit-learn>=1.8.0",
    "accelerate>=1.12.0",
    "rouge-score>=0.1.2",
    "trackio>=0.16.1",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "polars>=1.38.1",
    "typer>=0.21.1",
    "torch>=2.10.0",
    "nltk>=3.9.3",
]

[dependency-groups]
dev = [
    "marimo>=0.20.2",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]
